# bootstrappy

./: .gitignore  AUTHORS  HACKING.md  HACKING.rst  README.md  README.rst  setup.cfg  setup.py  tox.ini
bootstrappy/: mymodule.py
docs/: Makefile
docs/source/: bootstrappy.mymodule.rst  bootstrappy.rst  conf.py  index.rst
tests/: test-requirements.txt  test_module.py  test_sample.py
