[wheel]
universal = 1

[metadata]
name = bootstrappy
version = 0.0.1
summary = A Python bootstrap package
description-file =
    README.rst
author = Obulapathi N Challa
author-email = obulpathi@gmail.com
home-page = http://www.obulpathi.com/
classifier =
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    bootstrappy

[entry_points]
console_scripts =
    bootstrappy = bootstrappy.mymodule:hello

[nosetests]
where=tests
verbosity=2
